--- a/index.html
+++ b/index.html
@@ -89,12 +89,22 @@
             <div class="publication-links">
               <!-- Arxiv Link. -->
               <span class="link-block">
-                <a href="https://arxiv.org"
+                <a href="https://arxiv.org/pdf/2312.13139.pdf"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
                   </span>
                   <span style="font-size: 22px;">arXiv</span>
+                </a>
+              </span>
+              <!-- PDF Link. -->
+              <span class="link-block">
+                <a href="static/paper.pdf"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                      <i class="fas fa-file-pdf"></i>
+                  </span>
+                  <span style="font-size: 22px;">Paper</span>
                 </a>
               </span>
               <!-- Code Link. -->
@@ -528,11 +538,16 @@
 </section>
 
 <section class="section" id="BibTeX">
-  <div class="container is-max-desktop content">
+  <div class="container is-max-widescreen content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>
-    
-</code></pre>
+    <pre><code>@misc{wu2023unleashing,
+      title={Unleashing Large-Scale Video Generative Pre-training for Visual Robot Manipulation}, 
+      author={Hongtao Wu and Ya Jing and Chilam Cheang and Guangzeng Chen and Jiafeng Xu and Xinghang Li and Minghuan Liu and Hang Li and Tao Kong},
+      year={2023},
+      eprint={2312.13139},
+      archivePrefix={arXiv},
+      primaryClass={cs.RO}}
+    </code></pre>
   </div>
 </section>
 
