--- a/index.html
+++ b/index.html
@@ -537,20 +537,23 @@
     </div>
 </section>
 
-<section class="section" id="BibTeX">
-  <div class="container is-max-widescreen content">
-    <h2 class="title">BibTeX</h2>
-    <pre><code>@misc{wu2023unleashing,
+<section class="section">
+  <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title" style="text-align: left;">BibTeX</h2>
+        <div class="content has-text-justified">
+          <pre><code style="font-size: 24px;">@misc{wu2023unleashing,
       title={Unleashing Large-Scale Video Generative Pre-training for Visual Robot Manipulation}, 
       author={Hongtao Wu and Ya Jing and Chilam Cheang and Guangzeng Chen and Jiafeng Xu and Xinghang Li and Minghuan Liu and Hang Li and Tao Kong},
       year={2023},
       eprint={2312.13139},
       archivePrefix={arXiv},
       primaryClass={cs.RO}}
-    </code></pre>
-  </div>
+          </code></pre>
+        </div>
+      </div>
+    </div>
 </section>
-
 
 <footer class="footer">
   <div class="container">
