--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
         <div class="column has-text-centered">
           <div class="is-size-5 publication-authors" style="padding-top: 10px;">
             <span class="author-block">
-              Hongtao Wu,
+              Hongtao Wu<sup>&dagger;</sup>,
             </span>
             <span class="author-block">
-              Ya Jing,
+              Ya Jing<sup>&dagger;</sup>,
             </span>
             <span class="author-block">
               Chilam Cheang,
@@ -83,6 +83,9 @@
 
           <div class="is-size-5 publication-authors">
             <span class="author-block">ByteDance Research &nbsp;&nbsp;</span>
+          </div>
+          <div class="is-size-5 publication-authors">
+              <span class="author-block"><sup>&dagger;</sup>Equal Contribution</span>
           </div>
 
           <div class="column has-text-centered">
