--- a/index.html
+++ b/index.html
@@ -83,9 +83,8 @@
 
           <div class="is-size-5 publication-authors">
             <span class="author-block">ByteDance Research &nbsp;&nbsp;</span>
-          </div>
-          <div class="is-size-5 publication-authors">
-              <span class="author-block"><sup>&dagger;</sup>Equal Contribution</span>
+            <br>
+            <span style="font-size: 24px;"><sup>&dagger;</sup>Equal Contribution</span>
           </div>
 
           <div class="column has-text-centered">
