--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               </span>
               <!-- Code Link. -->
               <span class="link-block">
-                <a href="https://github.com/GR1-Manipulation/GR-1"
+                <a href="https://github.com/bytedance/GR-1"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
